# ProjetoCICD

./: .gitignore
.github/workflows/: ci-backend.yml
backend/: .gitignore
backend/app/: main.py  pyproject.toml
backend/app/tests/: test_user.py
frontend/: script.js
