[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.uv.workspace]
members = [
    "ecoplay",
]

[tool.ruff]
# select = ["E", "F", "I", "S"]
select = ["I","E","W"]
ignore = ["E501"]  # Ignorar linhas longas
line-length = 88
